--- a/src/CardBox.css
+++ b/src/CardBox.css
@@ -22,16 +22,18 @@
 
     
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 300px) {
     .card_Main {
        
         grid-template-columns: 1fr;
+        background-color: green;
     }   
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
     .card_Main {
         
         grid-template-columns: 1fr 1Fr;
+        background-color: blue;
     }
 }
 
