--- a/src/Detail.css
+++ b/src/Detail.css
@@ -1,14 +1,39 @@
 .Main_box{
-    max-width: 350px;
+        max-width: 400px;
         min-height: 80vh;
         background-color: #fff;
-        padding: 16px;
-        margin: 20px auto;
-        border-radius: 5px;
+        padding: 0;
+        margin: auto;
+        font:inherit;
+        margin: 0px 30px;
+        vertical-align: baseline;
         border: 1px solid #ddd;
     
 }
 h2{
     font-size: 18px;
     text-align: center;
+    margin:20px 0;
+    color:green;
+    font-family: "NanumSquareRoundExtraBold";
+    
+}
+.Mian_box__sub{
+    
+    margin: auto;
+}
+.input-word{
+    margin: 1em;
+}
+input {
+    padding: 15px 0px;
+    font-size: 18px;
+    border: none;
+
+    
+}
+
+#Login-form input:not([type="submit"]) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    transition: border-color 0.3s ease-in-out;
 }
