--- a/src/CardBox.css
+++ b/src/CardBox.css
@@ -4,7 +4,6 @@
     width: 90%;
     max-width: 1240px;
     margin: auto;
-
     display: grid;
     /* grid-template: 150px 400px / 1fr 1fr 1fr; */
     grid-auto-rows: 150px;
@@ -16,27 +15,28 @@
     /* align-items: stretch; */
     justify-content: center;
     flex-flow: wrap;
-
+    
     grid-gap: 20px;
        
 
     
 }
-@media only screen and (max-width: 300px) {
-    .card_Main {
-       
-        grid-template-columns: 1fr;
-        background-color: green;
-    }   
-}
-@media only screen and (max-width: 600px) {
+
+@media only screen and (max-width: 800px) {
     .card_Main {
         
-        grid-template-columns: 1fr 1Fr;
-        background-color: blue;
+        grid-template-columns: repeat(2,1fr);
+        background-color: green;
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .card_Main {
+
+        grid-template-columns: 1fr;
+        background-color: blue;
+    }
+}
 
 .card_Box {
     position: relative;
@@ -52,10 +52,10 @@
      height: auto; */
 
     box-sizing: border-box;
-        border: 3px solid rgba(200, 200, 200, .3);
-        background-color: rgba(255, 255, 255, 0.4);
-        padding: 20px;
-        border-radius: 20px;
+    border: 3px solid rgba(200, 200, 200, .3);
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: 20px;
+    border-radius: 20px;
    
 
 
