--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,15 @@
     background-image:linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)),
         url("./img/paper.jpeg") ;
         background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
+        background-size: 100%;
+        background-repeat: repeat;
+        background-size: 100% 100%;
+        background-attachment: scroll;
+        object-fit: cover;
+        
         width: 100vw;
         height: 100vh;
-         margin: 0px;
-    
+        margin: 0px;
         border: 0px;
         vertical-align: baseline;
 }
